--- a/deployment/install.yml
+++ b/deployment/install.yml
@@ -1,84 +1,149 @@
+apiVersion: v1
+data:
+  local-k8s.toml: |
+    [jupiter]
+        mode = "local-k8s"
+
+        [jupiter.registry.default]
+            endpoints = ["etcd:2379"]
+            timeout = "3s"
+
+        [jupiter.logger.default]
+            # debug = true
+            level = "info"
+            dir = "./logs/"
+        [jupiter.logger.jupiter]
+            # debug = true
+            level = "info"
+            dir = "./logs/"
+
+        [jupiter.trace.jaeger]
+            endpoint = "http://jaeger:14268/api/traces"
+            sampler = 1
+
+            # [jupiter.trace.otelgrpc]
+            #     endpoint = "localhost:4317"
+            #     sampler = 1
+
+    [jupiter.server]
+        [jupiter.server.http]
+            port = 9527
+        [jupiter.server.grpc]
+            port = 9528
+        [jupiter.server.govern]
+            port = 9529
+
+    [jupiter.grpc]
+        [jupiter.grpc.example]
+            addr = "127.0.0.1:9528"
+            timeout = "3s"
+
+        [jupiter.mysql.example]
+            dsn = "root:root@tcp(db:3306)/mysql?timeout=20s&readTimeout=20s"
+            debug = true
+            maxIdleConns = 50
+            connMaxLifeTime = "20m"
+            level = "panic"
+            slowThreshold = "400ms"
+            dialTimeout = "1s"
+
+        [jupiter.rocketmq.example]
+            [jupiter.rocketmq.example.consumer]
+                enable = true
+                addr = ["namesrv:9876"]
+                group = "testGroup"
+                dialTimeout = "3s"
+                rwTimeout = "3s"
+                topic = "DefaultCluster"
+                subExpression = "*"
+                rate = 100
+                enableTrace = true
+            [jupiter.rocketmq.example.producer]
+                group = "testGroup"
+                addr = ["namesrv:9876"]
+                dialTimeout = "3s"
+                rwTimeout = "3s"
+                topic = "DefaultCluster"
+                enableTrace = true
+
+    [jupiter.resty.example]
+        addr = "http://127.0.0.1:9527"
+
+    [jupiter.redis.example]
+        [jupiter.redis.example.stub]
+            debug = false
+            maxIdle = 10
+            maxActive = 50
+            dialTimeout = "2s"
+            readTimeout = "2s"
+            idleTimeout = "60s"
+            enableAccessLog = false
+            [jupiter.redis.example.stub.master]
+                addr = "redis://@redis:6379"
+            [jupiter.redis.example.stub.slaves]
+                addr = ["redis://@redis:6379"]
+kind: ConfigMap
+metadata:
+  name: exampleserver-config
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose-for-k8s.yml -o install.yml
-    kompose.version: 1.28.0 (HEAD)
-    kompose.volume.type: configMap
-  creationTimestamp: null
-  labels:
-    io.kompose.service: juiter-layout
-  name: juiter-layout
+  name: jupiter-layout-exampleserver
 spec:
   ports:
-    - name: "9527"
-      port: 9527
-      targetPort: 9527
-    - name: "9528"
-      port: 9528
-      targetPort: 9528
-    - name: "9529"
-      port: 9529
-      targetPort: 9529
+  - name: "9527"
+    port: 9527
+    targetPort: 9527
+  - name: "9528"
+    port: 9528
+    targetPort: 9528
+  - name: "9529"
+    port: 9529
+    targetPort: 9529
   selector:
-    io.kompose.service: juiter-layout
-status:
-  loadBalancer: {}
-
+    name: juiter-layout-exampleserver
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  annotations:
-    kompose.cmd: kompose convert -f docker-compose-for-k8s.yml -o install.yml
-    kompose.version: 1.28.0 (HEAD)
-    kompose.volume.type: configMap
-  creationTimestamp: null
   labels:
-    io.kompose.service: juiter-layout
-  name: juiter-layout
+    name: juiter-layout-exampleserver
+  name: juiter-layout-exampleserver
 spec:
   replicas: 1
   selector:
     matchLabels:
-      io.kompose.service: juiter-layout
+      name: juiter-layout-exampleserver
   strategy: {}
   template:
     metadata:
-      annotations:
-        kompose.cmd: kompose convert -f docker-compose-for-k8s.yml -o install.yml
-        kompose.version: 1.28.0 (HEAD)
-        kompose.volume.type: configMap
-      creationTimestamp: null
       labels:
-        io.kompose.network/deployment-default: "true"
-        io.kompose.service: juiter-layout
+        name: juiter-layout-exampleserver
     spec:
       containers:
-        - image: ghcr.io/douyu/jupiter-layout-dev:latest
-          name: juiter-layout
-          ports:
-            - containerPort: 9527
-            - containerPort: 9528
-            - containerPort: 9529
-          resources: {}
+      - command:
+        - /app/exampleserver
+        - --config
+        - /app/config/local-k8s.toml
+        image: ghcr.io/douyu/jupiter-layout-dev:latest
+        name: juiter-layout-exampleserver
+        ports:
+        - containerPort: 9527
+        - containerPort: 9528
+        - containerPort: 9529
+        resources:
+          limits:
+            cpu: 100m
+            memory: 128Mi
+          requests:
+            cpu: 100m
+            memory: 128Mi
+        volumeMounts:
+        - mountPath: /app/config
+          name: exampleserver-config
       restartPolicy: Always
-status: {}
-
----
-apiVersion: networking.k8s.io/v1
-kind: NetworkPolicy
-metadata:
-  creationTimestamp: null
-  name: deployment-default
-spec:
-  ingress:
-    - from:
-        - podSelector:
-            matchLabels:
-              io.kompose.network/deployment-default: "true"
-  podSelector:
-    matchLabels:
-      io.kompose.network/deployment-default: "true"
-
+      volumes:
+      - configMap:
+          name: exampleserver-config
+        name: exampleserver-config
