--- a/cmd/exampleserver/Dockerfile
+++ b/cmd/exampleserver/Dockerfile
@@ -4,8 +4,6 @@ WORKDIR /app
 
 COPY exampleserver /app/exampleserver
 
-EXPOSE 9527
-EXPOSE 9528
-EXPOSE 9529
+EXPOSE 9527 9528 9529
 
 CMD ["/app/exampleserver"]
