--- a/deployment/overlays/dev/local_service.yaml
+++ b/deployment/overlays/dev/local_service.yaml
@@ -4,3 +4,16 @@ metadata:
   name: jupiter-layout-exampleserver
 spec:
   type: NodePort
+  ports:
+    - name: "9527"
+      port: 9527
+      targetPort: 9527
+      nodePort: 30000
+    - name: "9528"
+      port: 9528
+      targetPort: 9528
+      nodePort: 30001
+    - name: "9529"
+      port : 9529
+      targetPort: 9529
+      nodePort: 30002
