feat: simplify docker and speed ci (#87)

--- a/cmd/exampleserver/Dockerfile
+++ b/cmd/exampleserver/Dockerfile
@@ -2,10 +2,8 @@ FROM alpine:latest
 
 WORKDIR /app
 
-COPY exampleserver /app/bin/exampleserver
+COPY exampleserver /app/exampleserver
 
-EXPOSE 9527
-EXPOSE 9528
-EXPOSE 9529
+EXPOSE 9527 9528 9529
 
-CMD ["/app/bin/exampleserver"]
+CMD ["/app/exampleserver"]
