--- a/.github/workflows/release-latest.yml
+++ b/.github/workflows/release-latest.yml
@@ -59,3 +59,39 @@ jobs:
           dockerfile: ./cmd/exampleserver/Dockerfile
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: generate install.yml
+        run: |
+          make gen-deploy-dev
+
+      # Ignore the error when we delete the latest release, it might not exist.
+      - name: Delete the latest Release
+        continue-on-error: true
+        run: |
+          gh release delete latest --repo $GITHUB_REPOSITORY
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository_owner }}/${{ github.event.repository.name }}
+
+      # Ignore the error when we delete the latest tag, it might not exist.
+      - name: Delete the latest Tag
+        continue-on-error: true
+        run:
+          gh api --method DELETE /repos/$GITHUB_REPOSITORY/git/refs/tags/latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository_owner }}/${{ github.event.repository.name }}
+
+      - name: Recreate the latest Release and Tag
+        uses: softprops/action-gh-release@v1
+        with:
+          draft: false
+          prerelease: true
+          tag_name: latest
+          files: |
+              ./deployment/install.yml
+          body: |
+            This is the "latest" release of **Juno**, which contains the most recent commits from the main branch.
+
+            This release **might not be stable**.
+            It is only intended for developers wishing to try out the latest features in Juno, some of which may not be fully implemented.
