--- a/deployment/exampleserver/service.yaml
+++ b/deployment/exampleserver/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: jupiter-layout-exampleserver
+  name: exampleserver
 spec:
   ports:
     - name: "9527"
