--- a/deployment/overlays/dev/kustomization.yaml
+++ b/deployment/overlays/dev/kustomization.yaml
@@ -2,7 +2,8 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
-  - ../../exampleserver
+  - "../../exampleserver"
+  - "./cronjob.yaml"
 
 patches:
 
