--- a/deployment/overlays/dev/cronjob.yaml
+++ b/deployment/overlays/dev/cronjob.yaml
@@ -6,6 +6,7 @@ spec:
   schedule: "* * * * *"
   jobTemplate:
     spec:
+      ttlSecondsAfterFinished: 100
       template:
         spec:
           containers:
