--- a/deployment/exampleserver/deployment.yaml
+++ b/deployment/exampleserver/deployment.yaml
@@ -37,5 +37,6 @@ spec:
               name: exampleserver-config
       volumes:
       - name: exampleserver-config
-        emptyDir: {}
+        configMap:
+          name: exampleserver-config
       restartPolicy: Always
