--- a/deployment/exampleserver/service.yaml
+++ b/deployment/exampleserver/service.yaml
@@ -1,6 +1,8 @@
 apiVersion: v1
 kind: Service
 metadata:
+  labels:
+    name: exampleserver
   name: exampleserver
 spec:
   ports:
@@ -15,4 +17,3 @@ spec:
       targetPort: 9529
   selector:
     name: exampleserver
-
