fix golang lint

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -33,8 +33,10 @@ linters:
 
 linters-settings:
   depguard:
-    deny:
-      - pkg: "github.com/sirupsen/logrus"
-        desc: not allowed
-      - pkg: "github.com/pkg/errors"
-        desc: Should be replaced by standard lib errors package
+    rules:
+      main:
+        deny:
+          - pkg: "github.com/sirupsen/logrus"
+            desc: not allowed
+          - pkg: "github.com/pkg/errors"
+            desc: Should be replaced by standard lib errors package
