--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Get dependencies
         run: |
           go env
-          go get -v -t -d ./...
+          go mod tidy -v
 
       - name: Build
         run: |
